--- a/templates/personal websites/essays.html
+++ b/templates/personal websites/essays.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
     <div class="bio-container">
-        <iframe class="video" width="560" height="315" src="https://drive.google.com/file/d/1D_7bmgec6CroKiH0azCarou7nZtob5TF/view" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://drive.google.com/file/d/1D_7bmgec6CroKiH0azCarou7nZtob5TF/preview" width="640" height="480" allow="autoplay"></iframe>
         <div class="bio-text" style="text-align:left;">
             <h2 style="text-align:left;">Water Lilies (2007)</h2>
             <p> Final project for Expository Writing 20: Queer Coming-of-Age Stories, where I explore a different view (is this pun?) on the gazes in Water Lilies - a 2007 film by Céline Sciamma.
