--- a/templates/personal websites/fysemr.html
+++ b/templates/personal websites/fysemr.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
     <div class="bio-container">
-        <iframe class="iframe" width="560" height="315" src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/view"></iframe>
+    <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="640" height="480" allow="autoplay"></iframe>
         <div class="bio-text" style="text-align:left;">
             <h2 style="text-align:left;">The Land of Rivers</h2>
             <p>“Umi ni oite dai sakana nashi” (海に置いて大魚なし), 
