--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}| Meet Chi{% endblock %}
+{% block extra_css %} {% endblock %}
 
 {% block content %}
 <!--- Navigation page for personal information --->
