--- a/templates/collab.html
+++ b/templates/collab.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}| Collaborations{% endblock %}
+{% block extra_css %} {% endblock %}
 
 {% block content %}
 <!--- Navigation page for displaying collaborative work --->
