--- a/templates/client.html
+++ b/templates/client.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}| Commissions{% endblock %}
+{% block extra_css %} {% endblock %}
 
 {% block content %}
 <!--- Navigation page for displaying client work --->
