--- a/templates/collab websites/olympics.html
+++ b/templates/collab websites/olympics.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}| Commissions{% endblock %}
+{% block extra_css %} {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
