--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Caslon+Display&display=swap" rel="stylesheet">
         <link href="/static/favicon.ico" rel="icon">
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/css/styles.css" rel="stylesheet">
+        {% block extra_css %}
+                <link href="/static/css/body.css" rel="stylesheet">
+        {% endblock %}
     </head>
 
     <body>
@@ -31,10 +34,12 @@
                     <a class="nav-item" href="client"> Commissions </a>
                 </div>
             </nav>
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock %}
         </main>
         <footer>
-            {% block footer %}{% endblock %}
+            {% block footer %}
+            {% endblock %}
             <p></p>
             Chi (Tue) Le | pirenily | Updated 2025
         </footer>
