--- a/templates/personal websites/superface.html
+++ b/templates/personal websites/superface.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}| Personal{% endblock %}
+{% block extra_css %} {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
