--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <link href="/static/favicon.ico" rel="icon">
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/css/styles.css" rel="stylesheet">
         <title>Pirenily</title>
         <script type="text/javascript">
             // Change the placeholder text every 3 seconds
