do i have to come back?

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}| Meet Chi{% endblock %}
-{% block extra_css %} {% endblock %}
+{% block extra_css %} 
+                <link href="/static/css/body.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <!--- Navigation page for personal information --->
