--- a/templates/client.html
+++ b/templates/client.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}| Commissions{% endblock %}
-{% block extra_css %} {% endblock %}
+{% block extra_css %} 
+                <link href="/static/css/body.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <!--- Navigation page for displaying client work --->
