--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}| Collaboration{% endblock %}
-{% block extra_css %} {% endblock %}
+{% block title %}| Collaborations{% endblock %}
+{% block extra_css %} 
+                <link href="/static/css/body.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
