--- a/templates/collab.html
+++ b/templates/collab.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}| Collaborations{% endblock %}
-{% block extra_css %} {% endblock %}
+{% block extra_css %} 
+                <link href="/static/css/body.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <!--- Navigation page for displaying collaborative work --->
