--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}| Personal{% endblock %}
-{% block extra_css %} {% endblock %}
+{% block extra_css %} 
+                <link href="/static/css/body.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying photography --->
