--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -80,6 +80,15 @@ footer {
     bottom: 0;
     z-index: 0;
 }
+.com-footer:hover {
+    background: linear-gradient(45deg, #1ca591, #fff, #1ca591);
+    background-size: 200%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradientHover 2s infinite linear;
+    z-index: 99;
+}
 
 .header {
     width: 95%;
@@ -99,6 +108,7 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
 }
+
 #video-container {
     display: flex;
     justify-content: center;
@@ -109,6 +119,36 @@ footer {
     overflow: hidden;
     z-index: -1;
     padding-bottom: 0;
+}
+
+::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+*::selection {
+    color: #1ca591;
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, 1.5);
+    background-color: transparent;
+}
+
+
+* {
+    outline: none;
+    border-width: 0;
+}
+
+*:focus {
+    outline: none;
+}
+
+#background-video {
+    width: 60%;
+    height: auto;
+    max-height: 70%;
+    padding-bottom: 10%;
+    z-index: -1;
+    filter: grayscale(50%);
 }
 
 
@@ -130,6 +170,13 @@ footer {
     }
     .nav-item{
         padding: 0.2rem;
+    }
+
+    .header {
+    font-size: 5rem;
+    height: 50vh;
+    background-size: contain;
+    background-image: url(/static/asset/images/other/homebackground.jpg);
     }
 }
 
