--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pirenily {% block title %}{% endblock %}</title>
         <!-- Import necessary fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
