--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/static/favicon.ico" rel="icon">
         <link href="/static/css/styles.css" rel="stylesheet">
         <title>Pirenily</title>
