--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,12 +93,12 @@ footer {
 }
 
 .header {
-    width: 98%;
+    width: 95%;
     font-family: "BHN Cinema";
     font-size: 7rem;
     display: flex;
     height: 60vh;
-    margin: 0;
+    margin: auto;
     text-decoration: none;
     color: #fff;
     margin-bottom: 2rem;
@@ -217,12 +217,13 @@ footer {
         font-size: 3rem;
         padding: 0rem;
         background-size: 85%;
+        width: 98%;
         background-image: url(/static/asset/images/other/homebackground.jpg);
     }
 
     footer {
         font-size: 0.8rem;
-        padding-top: 1rem;
+        padding-top: 0rem;
         padding-bottom: 1rem;
     }
 
